--- a/customcss.css
+++ b/customcss.css
@@ -26,14 +26,13 @@ body{
 }
 
 #button-greet {
-    align-content:flex-end;
+    float: right;
     background-color: #faebd7;
     border: auto solid darkgray;
     border-width: 5px;
     border-radius: 15px;
     color: darkslateblue;
     cursor: pointer;
-    display: inline-block;
     font-size: medium;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
